# cpu-shader-viewer

./: .gitmodules  CMakeLists.txt  README.md  benchmark  main.cc
benchmarks/micro/: conditional.slang  trig.slang  uv.slang
benchmarks/toy/: a_dead_planet_of_silicon_dreams_by_mrange.glsl
